tdf#149797 Change highlight background color in listbox

The highlight and highlighttext colors can be set for a
listbox. So a selected item in a listbox can now be paint
with anothers colors then the standard blue.

Change-Id: Iace2dd9a1a61abb7819b6c81eb0b8030912db32b